right-sidebar: Fix design bugs with keyboard-shortcuts.
The keyboard-shortcuts icon currently has a fix position
causing design related bugs such as overlapping with userlist
in the sidebar.

The fix wraps the invite-more-users link and keyboard icon inside
a div with display property as flex instead of just using the anchor
tags inside the side-bar items.

--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -201,8 +201,7 @@
 }
 
 #keyboard-icon {
-    position: fixed;
-    bottom: 8px; /* bottom padding of .compose-content */
+    position: relative;
     cursor: pointer;
     font-size: 20px;
 }
@@ -211,16 +210,14 @@
     color: inherit;
 }
 
+.right-sidebar-shortcuts {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 /* This max-width must be synced with message_viewport.is_narrow */
 @media (width < $xl_min) {
-    #sidebar-keyboard-shortcuts {
-        /* This is supposed to fix this appearing improperly in narrow
-        windows.  It's likely the wrong solution; a proper fix likely
-        involves replacing `position: fixed` in #keyboard-icon so that
-        it still appears in the right sidebar overlay. */
-        display: none;
-    }
-
     #userlist-toggle {
         display: block;
     }
